# tap-readthedocs

./: .gitignore  .pre-commit-config.yaml  README.md  meltano.yml  pyproject.toml
.github/workflows/: release.yaml  test.yaml  test.yml
tap_readthedocs/: client.py  streams.py  tap.py
