[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-pinned-extra==0.2",
  "hatch-vcs==0.5",
  "hatchling==1.29",
]

[project]
name = "tap-readthedocs"
description = "Singer tap for ReadTheDocs, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "ELT",
  "ReadTheDocs",
  "singer.io",
]
license = "Apache-2.0"
license-files = [ "LICENSE" ]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [
  "optional-dependencies",
  "version",
]
dependencies = [
  "requests-cache~=1.0",
  "singer-sdk~=0.54.0a4",
  "toolz~=1.1.0",
]
[[project.authors]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[[project.maintainers]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[project.scripts]
"tap-readthedocs" = "tap_readthedocs.tap:TapReadTheDocs.cli"
[project.urls]
Documentation = "https://github.com/reservoir-data/tap-readthedocs#readme"
Homepage = "https://github.com/reservoir-data/tap-readthedocs"
Repository = "https://github.com/reservoir-data/tap-readthedocs"

[dependency-groups]
dev = [
  { include-group = "testing" },
  { include-group = "typing" },
]
testing = [
  "deptry>=0.12",
  "pytest>=8",
  "singer-sdk[testing]",
]
typing = [
  "mypy",
  "ty>=0.0.8",
  "types-requests",
]

[tool.hatch.metadata.hooks.pinned_extra]
name = "pinned"
[tool.hatch.version]
source = "vcs"

[tool.uv]
required-version = ">=0.10"
prerelease = "allow"
preview = true

[tool.ruff]
line-length = 88
[tool.ruff.lint]
select = [
  "ALL",
]
ignore = [
  "COM812", # missing-trailing-comma
  "DJ",     # flake8-django
  "FIX002", # line-contains-todo
  "ISC001", # single-line-implicit-string-concatenation
]
per-file-ignores."noxfile.py" = [
  "ANN",
]
per-file-ignores."tests/*" = [
  "ANN201", # missing-return-type-public-function
  "S101",   # assert
  "SLF001", # private-member-access
]
unfixable = [
  "ERA001", # commented-out-code
]
flake8-annotations.allow-star-arg-any = true
isort.known-first-party = [
  "tap_readthedocs",
]
isort.required-imports = [
  "from __future__ import annotations",
]
pydocstyle.convention = "google"

[tool.deptry]
[tool.deptry.package_module_name_map]
mypy = "mypy"
types-requests = "requests"

[tool.pyproject-fmt]
table_format = "long"

[tool.pytest]
addopts = [
  "-v",
  "-ra",
]
filterwarnings = [
  "error",
  "default:Fields in transformed catalog but not in records:UserWarning",
  "default:No records returned in stream 'projects:UserWarning",
  "default:No records returned in stream 'redirects:UserWarning",
  "default:No records returned in stream 'subprojects:UserWarning",
  "default:No records returned in stream 'translations:UserWarning",
  "default:No records returned in stream 'versions:UserWarning",
  "default:No records were available to test:UserWarning",
  # Deprecation message introduced in Python 3.14. Upstream issue: https://github.com/python-attrs/cattrs/issues/635
  "default:'_UnionGenericAlias' is deprecated and slated for removal in Python 3.17:DeprecationWarning",
]
log_level = "INFO"
minversion = "9"
testpaths = [ "tests" ]
strict = true

[tool.tox]
min_version = "4.22"
requires = [ "tox", "tox-uv" ]
env_list = [
  "dependencies",
  "typing",
  "3.14",
  "3.13",
  "3.12",
]
[tool.tox.env]
dependencies.dependency_groups = [ "testing" ]
dependencies.commands = [ [ "deptry", "." ] ]
sync.commands = [ [ "tap-readthedocs", { replace = "posargs", default = [ "--config=ENV" ], extend = true } ] ]
typing.dependency_groups = [ "testing", "typing" ]
typing.commands = [
  [ "mypy", { replace = "posargs", default = [ "tap_readthedocs", "tests" ], extend = true } ],
  [ "ty", "check", { replace = "posargs", default = [ "tap_readthedocs", "tests" ], extend = true } ],
]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
pass_env = [ "TAP_READTHEDOCS_*" ]
dependency_groups = [ "testing" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]

[tool.mypy]
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
strict = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
overrides = [
  { module = [
    "toolz.*", # https://github.com/pytoolz/toolz/issues/496
  ], ignore_missing_imports = true },
]
